feat: Separate email for notification and profile

--- a/dev/system/app/entity/locales/entities/user_token/ja.yml
+++ b/dev/system/app/entity/locales/entities/user_token/ja.yml
@@ -6,6 +6,8 @@ entities:
       name: "トークン"
     public_user_id:
       name: "パブリックユーザID"
+    user_email:
+      name: "メールアドレス"
     access_token:
       name: "アクセストークン"
     refresh_token:
