--- a/dev/system/app/spa/locales/pages/account/profile/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/profile/ja.yml
@@ -3,20 +3,4 @@ pages:
     profile:
       heading: "アカウント詳細"
       button:
-        create_profile: "プロフィール追加"
-      table:
-        name:
-          head: "表示名"
-        affiliation:
-          head: "所属"
-        email:
-          head: "メールアドレス"
-        bio:
-          head: "自己紹介"
-        birthdate:
-          head: "生年月日"
-        gender:
-          head: "性別"
-          male: "男性"
-          female: "女性"
-          other: "その他"
+        create_profile: "プロフィールを追加"
