feat: Add token column to account profile table

--- a/dev/system/apis/account/entity/locales/entities/account_profile/ja.yml
+++ b/dev/system/apis/account/entity/locales/entities/account_profile/ja.yml
@@ -2,6 +2,8 @@ entities:
   account_profile:
     account_profile_id:
       name: "アカウントプロフィールID"
+    token:
+      name: "ランダムトークン"
     account_id:
       name: "アカウントID"
     name:
