feat: Add upload field for avatar and cover image

--- a/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
@@ -3,6 +3,10 @@ pages:
     components:
       account_profile:
         form:
+          avatar:
+            label: "アバター画像"
+          cover:
+            label: "カバー画像"
           name:
             label: "表示名"
             placeholder: "表示名"
