feat: Save uploaded avatar file

--- a/dev/system/apis/account/core/locales/common/ja.yml
+++ b/dev/system/apis/account/core/locales/common/ja.yml
@@ -3,3 +3,4 @@ system:
     fatal: "システムエラーが発生しました"
     unauthorized: "権限がありません"
     not_found: "データが見つかりませんでした"
+    invalid_format: "データ形式が正しくありません"
