feat: Save avatar and cover images

--- a/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
@@ -5,8 +5,12 @@ pages:
         form:
           avatar:
             label: "アバター画像"
+            button:
+              remove: "削除"
           cover:
             label: "カバー画像"
+            button:
+              remove: "削除"
           name:
             label: "表示名"
             placeholder: "表示名"
