--- a/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
@@ -36,5 +36,6 @@ pages:
           button:
             send: "作成"
             update: "更新"
+            cancel: "キャンセル"
           error:
             account_not_selected: "アカウントが選択されていません"
