--- a/dev/system/app/spa/locales/pages/account/create/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/create/ja.yml
@@ -9,6 +9,8 @@ pages:
         email:
           label: "メールアドレス"
           placeholder: "meower@example.com"
+        is_public:
+          label: "公開アカウント"
         button:
           send: "作成"
           cancel: "キャンセル"
