feat: Update group form

--- a/dev/system/app/spa/locales/pages/account/create/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/create/ja.yml
@@ -10,7 +10,7 @@ pages:
           label: "メールアドレス"
           placeholder: "meower@example.com"
         is_public:
-          label: "公開アカウント"
+          label: "公開設定"
         button:
           send: "作成"
           cancel: "キャンセル"
