feat: Add collapsing feature for advanced settings

--- a/dev/system/app/spa/locales/pages/account/detail/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/detail/ja.yml
@@ -24,6 +24,7 @@ pages:
         heading: "グループ"
         button:
           create: "グループを追加"
+        no_group: "まだグループに所属していません"
       account_profile_card:
         button:
           edit: "プロフィールを編集"
