--- a/dev/system/app/spa/locales/pages/account/group/components/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/group/components/ja.yml
@@ -3,6 +3,7 @@ pages:
     group:
       components:
         group_form:
+          advanced_setting: "詳細を設定"
           avatar:
             label: "アバター画像"
             button:
