--- a/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/profile/components/ja.yml
@@ -3,6 +3,7 @@ pages:
     profile:
       components:
         account_profile_form:
+          advanced_setting: "詳細を設定"
           avatar:
             label: "アバター画像"
             button:
